src/objects/PageLayoutFieldIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>T-478532</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Layout_Field_Id__c</fullName>
        <label>Page Layout Field Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>record_Type__c</fullName>
        <label>record Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Page Layout field Ids</label>
</CustomObject>